--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,52 +1,43 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --white: #FFF;
+  --black: #000;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  /* Gray scale */
+  --gray-50: #e6e6e6;
+  --gray-100: #cccccd;
+  --gray-200: #b3b3b5;
+  --gray-300: #99999c;
+  --gray-400: #808083;
+  --gray-500: #66676a;
+  --gray-600: #4d4d51;
+  --gray-700: #333439;
+  --gray-800: #1a1a20;
+  --gray-900: #000107;
 
-  --vt-c-indigo: #2c3e50;
+  --primary: #70BC63;
+  --accent-1: #DB5922;
+  --accent-2: #FAAD0E;
 
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
+  --text-light: var(--gray-900);
+  --text-dark: var(--gray-50);
 
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px;
+  --background: var(--white);
+  --surface: var(--gray-100);
+  --text: var(--text-light);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --background: var(--gray-900);
+    --surface: var(--gray-800);
+    --text: var(--text-dark);
   }
 }
 
@@ -60,8 +51,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--text);
+  background: var(--background);
   transition:
     color 0.5s,
     background-color 0.5s;
